<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/battleScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.battle.BattleActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/green_50"
        android:id="@+id/topContenderPack"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/topPokemonImg"
            android:layout_weight="1"
            android:src="@drawable/gyarados"
            android:padding="@dimen/imgSelection"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/topPokemonName"
            android:textColor="@color/black"
            android:textSize="@dimen/pokemonNames"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/nameGyarados"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/botContenderPack"
        android:background="@color/purple_50"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guide2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topContenderPack">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/botPokemonName"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/pokemonNames"
            android:text="@string/nameGyarados"
            android:gravity="center" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/ivBattleSecondPokemon"
            android:layout_weight="1"
            android:src="@drawable/gyarados"
            android:padding="@dimen/imgSelection"/>

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <ImageView
        android:layout_width="96dp"
        android:layout_height="0dp"
        android:id="@+id/vsIcon"
        app:layout_constraintBottom_toBottomOf="@+id/botContenderPack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topContenderPack"
        app:srcCompat="@drawable/versus"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/battleTxt"
        android:layout_margin="@dimen/imgSelection"
        android:text="@string/battleTxt"
        android:textColor="@color/black"
        android:textSize="@dimen/txtSize"
        app:layout_constraintBottom_toTopOf="@+id/battleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botContenderPack" />

    <Button
        android:id="@+id/battleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/imgSelection"
        android:text="@string/battleButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>